# fire-detection

./: CMakeLists.txt  detectors.cpp  detectors.hpp  fire-detection.kdev4  main.cpp
.kdev4/: fire-detection.kdev4
